# CurseComputerVision

./: CMakeLists.txt  LICENSE  create_test.sh  help_funcs.cpp  main.cpp
